SUBDIRS= src/2dfir
SUBDIRS+=src/blowfish
SUBDIRS+=src/crc32
SUBDIRS+=src/cubic
SUBDIRS+=src/dijkstra
SUBDIRS+=src/fdct
SUBDIRS+=src/float_matmult
SUBDIRS+=src/gdb-advance
SUBDIRS+=src/gdb-all-types
SUBDIRS+=src/gdb-anon
SUBDIRS+=src/gdb-arrayidx
SUBDIRS+=src/gdb-async
SUBDIRS+=src/int_matmult
SUBDIRS+=src/rijndael
SUBDIRS+=src/sha
SUBDIRS+=src/template

ACLOCAL_AMFLAGS= -I m4

