#   Top level Makefile.am for building a BEEBS benchmark
#
#   Copyright (C) 2013 Embecosm Limited and University of Bristol
#
#   This file is part of the Bristol/Embecosm Energy Efficiency Benchmark
#   Suite.
#
#   Contributor: James Pallister <james.pallister@bristol.ac.uk>
#
#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.
#
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.

SUBDIRS=src/platformcode

SUBDIRS+= src/2dfir
SUBDIRS+= src/adpcm
SUBDIRS+=src/blowfish
SUBDIRS+=src/bs
SUBDIRS+=src/bubblesort
SUBDIRS+=src/crc32
SUBDIRS+=src/cnt
SUBDIRS+=src/cubic
SUBDIRS+=src/duff
SUBDIRS+=src/dijkstra
SUBDIRS+=src/edn
SUBDIRS+=src/fasta
SUBDIRS+=src/fdct
SUBDIRS+=src/float_matmult
SUBDIRS+=src/gdb-advance
SUBDIRS+=src/gdb-all-types
SUBDIRS+=src/gdb-anon
SUBDIRS+=src/gdb-arrayidx
SUBDIRS+=src/gdb-async
SUBDIRS+=src/int_matmult
SUBDIRS+=src/nbody
SUBDIRS+=src/rijndael
SUBDIRS+=src/sha
SUBDIRS+=src/compress
SUBDIRS+=src/lms
SUBDIRS+=src/fft
SUBDIRS+=src/newlib-sqrt
SUBDIRS+=src/newlib-exp
SUBDIRS+=src/newlib-log
SUBDIRS+=src/newlib-mod
SUBDIRS+=src/expint
SUBDIRS+=src/fac
SUBDIRS+=src/fir
SUBDIRS+=src/insertsort
SUBDIRS+=src/ludcmp
SUBDIRS+=src/minver
SUBDIRS+=src/ndes
# ==== SUBDIRS (This is a marker for the generate-benchmark.sh script)
SUBDIRS+=src/template

SUBDIRS+=analysis

ACLOCAL_AMFLAGS= -I m4
