#   Top level Makefile.am for building a BEEBS benchmark
#
#   Copyright (C) 2013 Embecosm Limited and University of Bristol
#
#   This file is part of the Bristol/Embecosm Energy Efficiency Benchmark
#   Suite.
#
#   Contributor: James Pallister <james.pallister@bristol.ac.uk>
#
#   This program is free software: you can redistribute it and/or modify
#   it under the terms of the GNU General Public License as published by
#   the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.
#
#   This program is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#   GNU General Public License for more details.
#
#   You should have received a copy of the GNU General Public License
#   along with this program.  If not, see <http://www.gnu.org/licenses/>.

SUBDIRS=src/platformcode

SUBDIRS+= src/2dfir
SUBDIRS+= src/adpcm
SUBDIRS+=src/blowfish
SUBDIRS+=src/bs
SUBDIRS+=src/bsort100
SUBDIRS+=src/bubblesort
SUBDIRS+=src/cnt
SUBDIRS+=src/compress
SUBDIRS+=src/cover
SUBDIRS+=src/crc
SUBDIRS+=src/crc32
SUBDIRS+=src/ctl-stack
SUBDIRS+=src/ctl-vector
SUBDIRS+=src/cubic
SUBDIRS+=src/dhrystone
SUBDIRS+=src/dijkstra
SUBDIRS+=src/dtoa
SUBDIRS+=src/duff
SUBDIRS+=src/edn
SUBDIRS+=src/expint
SUBDIRS+=src/fac
SUBDIRS+=src/fasta
SUBDIRS+=src/fdct
SUBDIRS+=src/fft
SUBDIRS+=src/fibcall
SUBDIRS+=src/fir
SUBDIRS+=src/float_matmult
SUBDIRS+=src/frac
SUBDIRS+=src/gdb-advance
SUBDIRS+=src/gdb-all-types
SUBDIRS+=src/gdb-anon
SUBDIRS+=src/gdb-arrayidx
SUBDIRS+=src/gdb-async
SUBDIRS+=src/gdb-bitfields
SUBDIRS+=src/gdb-constvars
SUBDIRS+=src/gdb-store
SUBDIRS+=src/huffbench
SUBDIRS+=src/insertsort
SUBDIRS+=src/int_matmult
SUBDIRS+=src/janne_complex
SUBDIRS+=src/jfdctint
SUBDIRS+=src/lcdnum
SUBDIRS+=src/levenshtein
SUBDIRS+=src/lms
SUBDIRS+=src/ludcmp
SUBDIRS+=src/mergesort
SUBDIRS+=src/minver
SUBDIRS+=src/nbody
SUBDIRS+=src/ndes
SUBDIRS+=src/nettle-arcfour
SUBDIRS+=src/nettle-cast128
SUBDIRS+=src/nettle-des
SUBDIRS+=src/nettle-md5
SUBDIRS+=src/newlib-exp
SUBDIRS+=src/newlib-log
SUBDIRS+=src/newlib-mod
SUBDIRS+=src/newlib-sqrt
SUBDIRS+=src/ns
SUBDIRS+=src/nsichneu
SUBDIRS+=src/prime
SUBDIRS+=src/qsort
SUBDIRS+=src/qurt
SUBDIRS+=src/recursion
SUBDIRS+=src/rijndael
SUBDIRS+=src/select
SUBDIRS+=src/sglib-arraybinsearch
SUBDIRS+=src/sglib-arraysort
SUBDIRS+=src/sglib-arraysort1
SUBDIRS+=src/sglib-dllist
SUBDIRS+=src/sglib-hashtable
SUBDIRS+=src/sglib-listinsertsort
SUBDIRS+=src/sglib-listinsertsort1
SUBDIRS+=src/sglib-listsort
SUBDIRS+=src/sglib-queue
SUBDIRS+=src/sglib-rbtree
SUBDIRS+=src/sha
SUBDIRS+=src/slre
SUBDIRS+=src/sqrt
SUBDIRS+=src/st
SUBDIRS+=src/statemate
SUBDIRS+=src/stringsearch1
SUBDIRS+=src/strstr
SUBDIRS+=src/ud
SUBDIRS+=src/whetstone
SUBDIRS+=src/wikisort
# ==== SUBDIRS (This is a marker for the generate-benchmark.sh script)
SUBDIRS+=src/template

SUBDIRS+=analysis

ACLOCAL_AMFLAGS= -I m4
